# tailhedge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: strategy.md
src/tailhedge/: advisor.py  advisor_cli.py  cli.py  config.py  data.py  density.py  hedge_cli.py  ibkr.py  lifecycle.py  paths.py  portfolio.py  pricing.py  sizing.py  snapshot_cli.py
tests/: test_advisor.py  test_advisor_cli.py  test_cli.py  test_data.py  test_density.py  test_hedge_cli.py  test_ibkr_provider.py  test_ibkr_pure.py  test_ibkr_snapshot.py  test_lifecycle.py  test_paths.py  test_portfolio.py  test_pricing.py  test_sizing.py  test_smoke.py  test_snapshot_cli.py
tests/fixtures/: positions.csv  prices.csv
