[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tailhedge"
version = "1.0.0"
description = "Ticket-only tail-risk hedging advisor: OTM SPX/SPY puts, Spitznagel-style lifecycle, IBKR read-only"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "teo122619" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["pandas>=2.0", "numpy>=1.24", "ib_async>=1.0", "openpyxl>=3.0", "scipy>=1.10"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Repository = "https://github.com/teo122619/tailhedge"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
